--- a/src/app/components/cadastro-paciente/cadastro-paciente.component.html
+++ b/src/app/components/cadastro-paciente/cadastro-paciente.component.html
@@ -1,7 +1,7 @@
 <ion-content class="ion-padding">
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Cadastro de autor</ion-card-title>
+      <ion-card-title>Cadastro de paciente</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <form>
